[package]
name = "frame"
authors = ["Max van Dijck"]
version = "0.0.1"
edition = "2021"
description = "Command line tool for quick dataframe operations"
repository = "https://github.com/MaxVanDijck/frame"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.38.3", features = ["lazy", "parquet", "csv", "polars-io"] }
polars-io = { version = "0.38.3", features = ["parquet", "csv"] }
