[package]
name = "frm"
authors = ["Max van Dijck"]
version = "0.0.1"
edition = "2021"
description = "Command line tool for quick dataframe operations"
repository = "https://github.com/MaxVanDijck/frame"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
polars = { version = "0.38.3", features = ["lazy", "parquet", "csv", "polars-io"] }
polars-io = { version = "0.38.3", features = ["parquet", "csv"] }
